src/testing/private_tests/negative_tests/bad_out_of_bounds.eds
void main() {
    int** a;
    int d[3];
    
    d[0] = 1; d[1] = 2; d[2] = 3;
    
    *a = d; // Bad access
    *((*a)+3) = 2;
    d[0] += *((*a)+3);
    d[4] = 5;
    
    d[6] = 8;
    d[2] += d[6];
}
